--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "index.js"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec test/main.js"
   },
   "repository": {
     "type": "git",
@@ -30,5 +30,11 @@
     "cache-breaker": "0.0.4",
     "gulp-util": "^3.0.6",
     "through2": "^2.0.0"
+  },
+  "devDependencies": {
+    "event-stream": "^3.3.1",
+    "mocha": "^2.2.5",
+    "should": "^7.0.2",
+    "vinyl": "^0.5.0"
   }
 }
