--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "index.js"
   ],
   "scripts": {
-    "test": "mocha --reporter spec"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
@@ -33,7 +33,10 @@
   },
   "devDependencies": {
     "event-stream": "^3.3.1",
+    "gulp": "^3.9.0",
+    "gulp-mocha": "^2.1.3",
     "mocha": "^2.2.5",
+    "rimraf": "^2.4.2",
     "should": "^7.0.2",
     "vinyl": "^0.5.0"
   }
